--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,5 +22,5 @@ jobs:
           name: run tests
           command: |
             . venv/bin/activate
-            flake8 --statistics
+            flake8 --exclude=venv* --statistics
             pytest -v --cov=ML_streamlit_app
