--- a/.github/workflows/master_testapisf.yml
+++ b/.github/workflows/master_testapisf.yml
@@ -31,7 +31,9 @@ jobs:
         run: pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
-      
+      - name: Run syntax test
+        run: flake8 --exclude=venv* --statistics pytest -v --cov=ML_streamlit_app
+
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
         with:
