--- a/.github/workflows/master_testapisf1.yml
+++ b/.github/workflows/master_testapisf1.yml
@@ -32,6 +32,12 @@ jobs:
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
+      - name: Run syntax test
+        run: flake8 --exclude=venv* --statistics
+
+      - name: Run unit tests
+        run: pytest -v --cov=ML_streamlit_app
+        
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
         with:
